[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/EnemySilverYellow.png" type="Texture" id=1]
[ext_resource path="res://scripts/EnemyLevel3.gd" type="Script" id=2]
[ext_resource path="res://assets/Explosion/regularExplosion07.png" type="Texture" id=3]
[ext_resource path="res://assets/Explosion/regularExplosion08.png" type="Texture" id=4]
[ext_resource path="res://assets/Explosion/regularExplosion01.png" type="Texture" id=5]
[ext_resource path="res://assets/Explosion/regularExplosion02.png" type="Texture" id=6]
[ext_resource path="res://assets/Explosion/regularExplosion06.png" type="Texture" id=7]
[ext_resource path="res://assets/Explosion/regularExplosion04.png" type="Texture" id=8]
[ext_resource path="res://assets/Explosion/regularExplosion05.png" type="Texture" id=9]
[ext_resource path="res://assets/Explosion/regularExplosion00.png" type="Texture" id=10]
[ext_resource path="res://assets/Explosion/regularExplosion03.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 13.2436, 10.4927 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 29.4902, 22.7565 )

[sub_resource type="CircleShape2D" id=6]
radius = 300.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[node name="EnemyLevel3" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 11
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.55021, 0.316829 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2.02477, 0 )
shape = SubResource( 5 )

[node name="Scanner" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scanner"]
position = Vector2( -0.34964, 0 )
shape = SubResource( 6 )

[node name="FireTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 3 )
frame = 1
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Scanner" to="." method="_on_Scanner_body_entered"]
[connection signal="body_exited" from="Scanner" to="." method="_on_Scanner_body_exited"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
